# ai-faq-chatbot

./: .env.example  README.md  config.yaml  knowledge_base.txt  main.py  pyproject.toml
agents/: evaluator_agent.py
outputs/: sample_queries.json
src/: main.py  pipeline.py
src/agents/: evaluator_agent.py
src/prompts/: templates.py
src/shared/: config_loader.py
src/utils/: embeddings.py  search.py
utils/: chunker.py  embeddings.py  search.py
