[project]
name = "chatbot-faq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "google-cloud-aiplatform>=1.148.0",
    "google-genai>=1.73.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.29",
    "langchain-google-vertexai>=3.2.2",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
]
